--- a/package.xml
+++ b/package.xml
@@ -52,7 +52,7 @@
   <run_depend>rospy</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
-
+  <run_depend>move_base_msgs2</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
